MeshDeform can't bind (Cannot get mesh from cage object) #56899

Closed
opened 2018-09-24 16:03:25 +02:00 by Hjalti Hjálmarsson · 5 comments

System Information
Xbuntu / AMD

Blender Version
969cbed

Short description of error
When trying to bind a MeshDeform, it just gives you the error message "Cannot get mesh from cage object"

Exact steps for others to reproduce the error
New file (with the default cube)
Create a monkey head
Add a MeshDeform modifier to the monkey head
In the modifier, select the Cube as the object
Press "Bind"
...the error message "Cannot get mesh from cage object" gets displayed under the modifier...

**System Information** Xbuntu / AMD **Blender Version** 969cbed **Short description of error** When trying to bind a MeshDeform, it just gives you the error message "Cannot get mesh from cage object" **Exact steps for others to reproduce the error** New file (with the default cube) Create a monkey head Add a MeshDeform modifier to the monkey head In the modifier, select the Cube as the object Press "Bind" ...the error message "Cannot get mesh from cage object" gets displayed under the modifier...
Author
Member

Added subscriber: @Hjalti

Added subscriber: @Hjalti
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

The problem seems to be that the cube->runtime.mesh_eval is still NULL when the mesh deform modifier executes (it binds during normal execution, not when the button is pressed afaik).
mesh_defom_modifier.blend

The problem seems to be that the `cube->runtime.mesh_eval` is still `NULL` when the mesh deform modifier executes (it binds during normal execution, not when the button is pressed afaik). [mesh_defom_modifier.blend](https://archive.blender.org/developer/F4807540/mesh_defom_modifier.blend)

This issue was referenced by e4284d06ad

This issue was referenced by e4284d06ada4f3eeac9c19f987e8b2d8eff47e62

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56899
No description provided.