Fix T56899: mesh deform bind does not work.